[gd_scene load_steps=12 format=3 uid="uid://dmulyeg8hg6yt"]

[ext_resource type="Script" path="res://scenes/Objects/Enemies/sniper_joe.gd" id="1_ds0gt"]
[ext_resource type="Texture2D" uid="uid://daefccg61j7bv" path="res://sprites/Enemies/Sniper Joe.png" id="1_vqtgt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncy6"]
atlas = ExtResource("1_vqtgt")
region = Rect2(0, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkfm2"]
atlas = ExtResource("1_vqtgt")
region = Rect2(38, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wel8"]
atlas = ExtResource("1_vqtgt")
region = Rect2(76, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jo2t"]
atlas = ExtResource("1_vqtgt")
region = Rect2(114, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15ei"]
atlas = ExtResource("1_vqtgt")
region = Rect2(152, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrfut"]
atlas = ExtResource("1_vqtgt")
region = Rect2(190, 0, 38, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_62nvj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkfm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wel8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jo2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrfut")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btiql"]
size = Vector2(8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp5vq"]
size = Vector2(21, 27)

[node name="Sniper Joe" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ds0gt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_62nvj")
animation = &"Idle"

[node name="reflect" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="ShieldHitbox" type="CollisionShape2D" parent="reflect"]
position = Vector2(-8, -5)
shape = SubResource("RectangleShape2D_btiql")

[node name="hitable" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="MainHitbox" type="CollisionShape2D" parent="hitable"]
position = Vector2(6.5, -5.5)
shape = SubResource("RectangleShape2D_wp5vq")

[node name="hurt" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="MainHitbox" type="CollisionShape2D" parent="hurt"]
position = Vector2(6.5, -5.5)
shape = SubResource("RectangleShape2D_wp5vq")
debug_color = Color(1, 0.00392157, 0.0705882, 0.419608)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(6.5, -5.5)
shape = SubResource("RectangleShape2D_wp5vq")
debug_color = Color(0, 1, 0.0705882, 0.419608)

[connection signal="body_entered" from="reflect" to="." method="_on_reflect_body_entered"]
[connection signal="body_entered" from="hitable" to="." method="_on_hitable_body_entered"]
[connection signal="body_entered" from="hurt" to="." method="_on_hurt_body_entered"]
